# thirdeye

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt
apps/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/scripts/: dev.sh
apps/src/: main.tsx  styles.css
apps/tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/tauri/capabilities/: default.json
apps/tauri/icons/: icon.icns
apps/tauri/src/: app_commands.rs  lib.rs  local_services.rs  main.rs  runtime.rs  silence_notifications.rs
config/: deepgram.yaml  openclaw.json  openclaw.jsonc  recorder.yaml
docs/: api.md  architecture.md  operations.md  release.md  troubleshooting.md
docs/superpowers/: README.md
infra/: compose.yaml
logs/: 20260429-153407-document-thirdeye-silence-alert-notification-session.md
prompts/: canonical_summary.txt  live_summary_default.txt  openclaw_transcript_summary_input.txt  openclaw_transcript_summary_instructions.txt  recap_system.txt  recap_user.txt  voice_note_summary_default.txt
scripts/: bootstrap.sh  build_macos_capture_helper.sh  export_artifacts.sh  macos_capture_agent.sh  remediate_openclaw_gateway.sh  smoke_test.sh
services/controller-api/: requirements.txt
tests/python/: conftest.py  test_artifacts.py  test_auth.py  test_capture_agent_contract.py  test_capture_backends.py  test_contract_modules.py  test_controller_api.py  test_core_utils.py  test_db_migrations.py  test_deepgram_client.py  test_deepgram_relay.py  test_desktop_agent.py  test_jobs.py  (+24 more)
(+123 files in other folders)
