[package]
name = "thirdeye-macos"
version = "0.1.0"
description = "thirdeye macOS app shell"
authors = ["thirdeye"]
edition = "2021"

[lib]
name = "thirdeye_macos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "thirdeye"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = [] }
